--- a/page7.html
+++ b/page7.html
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udjEDUa6Mt" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="udjIvQNVXQ" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udjEDUa6Mt" data-bs-target="#udjEDUa6Mt"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udjEDUa6Mt" data-bs-target="#udjEDUa6Mt"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udjEDUa6Mt" data-bs-target="#udjEDUa6Mt"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udjIvQNVXQ" data-bs-target="#udjIvQNVXQ"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udjIvQNVXQ" data-bs-target="#udjIvQNVXQ"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udjIvQNVXQ" data-bs-target="#udjIvQNVXQ"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udjEDUa6Mt">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udjIvQNVXQ">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udjEDUa6Mt">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udjIvQNVXQ">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
