--- a/page16.html
+++ b/page16.html
@@ -75,11 +75,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="udvr5BcSoh" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="udvrAsFV3Y" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udvr5BcSoh" data-bs-target="#udvr5BcSoh"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udvr5BcSoh" data-bs-target="#udvr5BcSoh"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udvr5BcSoh" data-bs-target="#udvr5BcSoh"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#udvrAsFV3Y" data-bs-target="#udvrAsFV3Y"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#udvrAsFV3Y" data-bs-target="#udvrAsFV3Y"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#udvrAsFV3Y" data-bs-target="#udvrAsFV3Y"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -101,11 +101,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udvr5BcSoh">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#udvrAsFV3Y">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udvr5BcSoh">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#udvrAsFV3Y">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -141,7 +141,7 @@
                     
                 </div>
                 <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nKn1GZVzwiCth06JkdHdiT36H6ykcOv6QGmVByVWU7zKsKjRRRVNZs5ihyZz4S1lnpbOmGl3dv1Ji+Z4HF+ShbC9gJhP/+BtRJ3z1+RGCQv9M5l/vJcoPY054FgmbxnE">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eKPEe0UzrjjLgLeSiO9dhS3Rja+xZ4brXKjfMWg22vxo03SDifU6IddYoE2s0PJs96lSQNP7Hd3Z6S9jflZvvGaaiwqvua68O1IhhFdgM7ZGcgB6TYKUxYgWw9p3lfJP">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Terima kasih sudah mendaftar!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -296,7 +296,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3125676" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">Free AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
